--- a/time141-react-next/package.json
+++ b/time141-react-next/package.json
@@ -13,6 +13,7 @@
     "postcss": "^8.2.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-map-gl": "^6.0.3",
     "tailwindcss": "^2.0.2"
   }
 }
